--- a/capstone_project/pubspec.yaml
+++ b/capstone_project/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   pin_input_text_field: ^4.5.1
+  image_picker: ^1.0.4
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
