--- a/capstone_project/pubspec.yaml
+++ b/capstone_project/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   pin_input_text_field: ^4.5.1
   image_picker: ^1.0.4
   dotted_border: ^2.1.0
+  flutter_svg: ^2.0.9
+  email_validator: ^2.1.17
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/icons/
 
   # To add fonts to application
 
