--- a/capstone_project/pubspec.yaml
+++ b/capstone_project/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   dio: ^5.4.0
   equatable: ^2.0.5
   email_otp: ^2.1.1
+  image_picker: ^1.0.4
+  dotted_border: ^2.1.0
+  flutter_svg: ^2.0.9
+  email_validator: ^2.1.17
 
 dev_dependencies:
   flutter_test:
