--- a/capstone_project/pubspec.yaml
+++ b/capstone_project/pubspec.yaml
@@ -68,7 +68,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/icons/
+    - assets/icons/account_screen/
+    - assets/icons/account_screen/contact_us_screen/
+    - assets/icons/account_screen/profile_screen/
+    
 
   # To add fonts to application
 
