--- a/capstone_project/pubspec.yaml
+++ b/capstone_project/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   dotted_border: ^2.1.0
   flutter_svg: ^2.0.9
   email_validator: ^2.1.17
+  flutter_floating_bottom_bar: ^1.2.0
+  
 
 dev_dependencies:
   flutter_test:
@@ -75,7 +77,7 @@ flutter:
     - assets/icons/account_screen/
     - assets/icons/account_screen/contact_us_screen/
     - assets/icons/account_screen/profile_screen/
-    
+    - assets/icons/bottom_bar/
 
   # To add fonts to application
 
