--- a/capstone_project/pubspec.yaml
+++ b/capstone_project/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   dotted_border: ^2.1.0
   flutter_svg: ^2.0.9
   email_validator: ^2.1.17
+  
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +73,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/icons/all_icon/
     - assets/icons/account_screen/
     - assets/icons/account_screen/contact_us_screen/
     - assets/icons/account_screen/profile_screen/
