--- a/capstone_project/pubspec.yaml
+++ b/capstone_project/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
   dotted_border: ^2.1.0
   flutter_svg: ^2.0.9
   email_validator: ^2.1.17
+  textfield_datepicker: ^0.2.0
+  group_button: ^5.3.3
+  cool_dropdown: ^2.1.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
