--- a/capstone_project/pubspec.yaml
+++ b/capstone_project/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   flutter_svg: ^2.0.9
   email_validator: ^2.1.17
   flutter_rating_bar: ^4.0.1
+  textfield_datepicker: ^0.2.0
+  group_button: ^5.3.3
+  cool_dropdown: ^2.1.0
+  intl: ^0.18.1
   
 
 dev_dependencies:
