--- a/capstone_project/pubspec.yaml
+++ b/capstone_project/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   dotted_border: ^2.1.0
   flutter_svg: ^2.0.9
   email_validator: ^2.1.17
+  connectivity: ^3.0.6
 
 dev_dependencies:
   flutter_test:
