--- a/capstone_project/pubspec.yaml
+++ b/capstone_project/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   group_button: ^5.3.3
   cool_dropdown: ^2.1.0
   intl: ^0.18.1
+  shared_preferences: ^2.2.2
  
 
 dev_dependencies:
@@ -64,7 +65,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
