--- a/capstone_project/pubspec.yaml
+++ b/capstone_project/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   cool_dropdown: ^2.1.0
   intl: ^0.18.1
   shared_preferences: ^2.2.2
+  animated_overflow: ^2.0.0
  
 
 dev_dependencies:
