--- a/capstone_project/pubspec.yaml
+++ b/capstone_project/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   shared_preferences: ^2.2.2
   animated_overflow: ^2.0.0
   flutter_speed_dial: ^7.0.0
+  sqflite: ^2.3.0
+  path: ^1.8.3
  
 
 dev_dependencies:
