--- a/capstone_project/pubspec.yaml
+++ b/capstone_project/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   shared_preferences: ^2.2.2
   animated_overflow: ^2.0.0
   flutter_speed_dial: ^7.0.0
+  chatview: ^1.3.1
+  flutter_chat_ui: ^1.6.10
+  flutter_chat_types: ^3.6.2
  
 
 dev_dependencies:
