--- a/capstone_project/pubspec.yaml
+++ b/capstone_project/pubspec.yaml
@@ -61,7 +61,7 @@ dependencies:
   chatview: ^1.3.1
   flutter_chat_ui: ^1.6.10
   flutter_chat_types: ^3.6.2
- 
+  chat_gpt_sdk: ^2.2.5
 
 dev_dependencies:
   flutter_test:
